tests/scripts/errors/errors_1.zs
#option NO_ERROR_HALT on

global script Global
{
    void missing_run()
    {
        int number = 123;
        printf("hello world: %d\n", number_oops);
    }
}
